package CommandSales;

public class Twenty {

    private boolean TwentyOn;

    void startTwentyPercentSale()
    {
        TwentyOn = true;
    }

    void stopTwentyPercentSale()
    {
        TwentyOn = false;
    }
}
